e2/y.output
Terminals which are not used

   T_Interface
   T_Implements
   T_Lineend
   T_OR
   T_AND
   T_HET
   T_LET
   T_ELSE


State 11 conflicts: 1 shift/reduce
State 48 conflicts: 32 reduce/reduce
State 97 conflicts: 4 shift/reduce
State 98 conflicts: 4 shift/reduce
State 135 conflicts: 15 shift/reduce
State 136 conflicts: 15 shift/reduce
State 137 conflicts: 4 shift/reduce
State 138 conflicts: 4 shift/reduce
State 139 conflicts: 15 shift/reduce
State 140 conflicts: 15 shift/reduce
State 141 conflicts: 4 shift/reduce
State 142 conflicts: 4 shift/reduce
State 143 conflicts: 4 shift/reduce
State 144 conflicts: 4 shift/reduce
State 145 conflicts: 4 shift/reduce
State 146 conflicts: 4 shift/reduce
State 147 conflicts: 4 shift/reduce
State 162 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ClassDefn
    2        | Program ClassDefn
    3        | error

    4 VariableDecl: Variable ';'
    5             | error

    6 Variable: Type T_Identifier
    7         | error

    8 Type: T_Int
    9     | T_Double
   10     | T_Boolean
   11     | T_String
   12     | T_Void
   13     | T_Class T_Identifier
   14     | Type '[' ']'
   15     | error

   16 Formals: VariableMore
   17        | /* empty */

   18 VariableMore: Variable
   19             | VariableMore ',' Variable

   20 FunctionDecl: Type T_Identifier '(' Formals ')' ';'

   21 FunctionDefn: Type T_Identifier '(' Formals ')' StmtBlock

   22 ClassDefn: T_Class T_Identifier ExtendsQ '{' Fieldlist '}'

   23 ExtendsQ: T_Extends T_Identifier
   24         | /* empty */

   25 Fieldlist: Fieldlist Field
   26          | /* empty */
   27          | error

   28 Field: VariableDecl
   29      | FunctionDecl
   30      | FunctionDefn

   31 StmtBlock: '{' Stmtlist '}'
   32          | error

   33 Stmtlist: Stmtlist Stmt
   34         | /* empty */

   35 Stmt: VariableDecl
   36     | SimpleStmt ';'
   37     | IfStmt
   38     | WhileStmt
   39     | ForStmt
   40     | BreakStmt ';'
   41     | ReturnStmt ';'
   42     | PrintStmt ';'
   43     | StmtBlock

   44 SimpleStmt: LValue '=' Expr
   45           | Call
   46           | /* empty */
   47           | error

   48 LValue: Expr '.' T_Identifier
   49       | T_Identifier
   50       | Expr '[' Expr ']'
   51       | error

   52 Call: Expr '.' T_Identifier '(' Actuals ')'
   53     | T_Identifier '(' Actuals ')'

   54 Actuals: ExprMore
   55        | /* empty */

   56 ExprMore: Expr
   57         | ExprMore ',' Expr

   58 ForStmt: T_For '(' SimpleStmt ';' BoolExpr ';' SimpleStmt ')' Stmt

   59 WhileStmt: T_While '(' BoolExpr ')' Stmt

   60 IfStmt: T_If '(' BoolExpr ')' Stmt
   61       | T_If '(' BoolExpr ')' Stmt T_Else Stmt

   62 ReturnStmt: T_Return
   63           | T_Return Expr

   64 BreakStmt: T_Break

   65 PrintStmt: T_Print '(' ExprMore ')'

   66 BoolExpr: Expr

   67 Expr: Constant
   68     | LValue
   69     | T_This
   70     | Call
   71     | '(' Expr ')'
   72     | Expr '+' Expr
   73     | Expr '-' Expr
   74     | Expr '*' Expr
   75     | Expr '/' Expr
   76     | Expr '%' Expr
   77     | '-' Expr
   78     | Expr '<' Expr
   79     | Expr T_Le Expr
   80     | Expr '>' Expr
   81     | Expr T_Ge Expr
   82     | Expr T_Eq Expr
   83     | Expr T_Ne Expr
   84     | Expr T_And Expr
   85     | Expr T_Or Expr
   86     | '!' Expr
   87     | T_ReadInteger '(' ')'
   88     | T_ReadLine '(' ')'
   89     | T_New T_Identifier '(' ')'
   90     | T_NewArray '(' Expr ',' Type ')'

   91 Constant: T_IntConstant
   92         | T_DoubleConstant
   93         | T_BooleanConstant
   94         | T_StringConstant
   95         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 86
'%' (37) 76
'(' (40) 20 21 52 53 58 59 60 61 65 71 87 88 89 90
')' (41) 20 21 52 53 58 59 60 61 65 71 87 88 89 90
'*' (42) 74
'+' (43) 72
',' (44) 19 57 90
'-' (45) 73 77
'.' (46) 48 52
'/' (47) 75
';' (59) 4 20 36 40 41 42 58
'<' (60) 78
'=' (61) 44
'>' (62) 80
'[' (91) 14 50
']' (93) 14 50
'{' (123) 22 31
'}' (125) 22 31
error (256) 3 5 7 15 27 32 47 51
T_Le (258) 79
T_Ge (259) 81
T_Eq (260) 82
T_Ne (261) 83
T_And (262) 84
T_Or (263) 85
T_Void (264) 12
T_Int (265) 8
T_Double (266) 9
T_Boolean (267) 10
T_String (268) 11
T_Class (269) 13 22
T_Interface (270)
T_Null (271) 95
T_This (272) 69
T_Extends (273) 23
T_Implements (274)
T_For (275) 58
T_While (276) 59
T_If (277) 60 61
T_Else (278) 61
T_Return (279) 62 63
T_Break (280) 64
T_New (281) 89
T_NewArray (282) 90
T_Print (283) 65
T_ReadInteger (284) 87
T_ReadLine (285) 88
T_IntConstant (286) 91
T_DoubleConstant (287) 92
T_StringConstant (288) 94
T_Identifier (289) 6 13 20 21 22 23 48 49 52 53 89
T_BooleanConstant (290) 93
T_Lineend (291)
T_OR (292)
T_AND (293)
T_HET (294)
T_LET (295)
T_ELSE (296)
T_IFX (297)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
Program (62)
    on left: 1 2 3, on right: 0 2
VariableDecl (63)
    on left: 4 5, on right: 28 35
Variable (64)
    on left: 6 7, on right: 4 18 19
Type (65)
    on left: 8 9 10 11 12 13 14 15, on right: 6 14 20 21 90
Formals (66)
    on left: 16 17, on right: 20 21
VariableMore (67)
    on left: 18 19, on right: 16 19
FunctionDecl (68)
    on left: 20, on right: 29
FunctionDefn (69)
    on left: 21, on right: 30
ClassDefn (70)
    on left: 22, on right: 1 2
ExtendsQ (71)
    on left: 23 24, on right: 22
Fieldlist (72)
    on left: 25 26 27, on right: 22 25
Field (73)
    on left: 28 29 30, on right: 25
StmtBlock (74)
    on left: 31 32, on right: 21 43
Stmtlist (75)
    on left: 33 34, on right: 31 33
Stmt (76)
    on left: 35 36 37 38 39 40 41 42 43, on right: 33 58 59 60 61
SimpleStmt (77)
    on left: 44 45 46 47, on right: 36 58
LValue (78)
    on left: 48 49 50 51, on right: 44 68
Call (79)
    on left: 52 53, on right: 45 70
Actuals (80)
    on left: 54 55, on right: 52 53
ExprMore (81)
    on left: 56 57, on right: 54 57 65
ForStmt (82)
    on left: 58, on right: 39
WhileStmt (83)
    on left: 59, on right: 38
IfStmt (84)
    on left: 60 61, on right: 37
ReturnStmt (85)
    on left: 62 63, on right: 41
BreakStmt (86)
    on left: 64, on right: 40
PrintStmt (87)
    on left: 65, on right: 42
BoolExpr (88)
    on left: 66, on right: 58 59 60 61
Expr (89)
    on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    85 86 87 88 89 90, on right: 44 48 50 52 56 57 63 66 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 86 90
Constant (90)
    on left: 91 92 93 94 95, on right: 67


state 0

    0 $accept: . Program $end

    error    shift, and go to state 1
    T_Class  shift, and go to state 2

    Program    go to state 3
    ClassDefn  go to state 4


state 1

    3 Program: error .

    $default  reduce using rule 3 (Program)


state 2

   22 ClassDefn: T_Class . T_Identifier ExtendsQ '{' Fieldlist '}'

    T_Identifier  shift, and go to state 5


state 3

    0 $accept: Program . $end
    2 Program: Program . ClassDefn

    $end     shift, and go to state 6
    T_Class  shift, and go to state 2

    ClassDefn  go to state 7


state 4

    1 Program: ClassDefn .

    $default  reduce using rule 1 (Program)


state 5

   22 ClassDefn: T_Class T_Identifier . ExtendsQ '{' Fieldlist '}'

    T_Extends  shift, and go to state 8

    $default  reduce using rule 24 (ExtendsQ)

    ExtendsQ  go to state 9


state 6

    0 $accept: Program $end .

    $default  accept


state 7

    2 Program: Program ClassDefn .

    $default  reduce using rule 2 (Program)


state 8

   23 ExtendsQ: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 10


state 9

   22 ClassDefn: T_Class T_Identifier ExtendsQ . '{' Fieldlist '}'

    '{'  shift, and go to state 11


state 10

   23 ExtendsQ: T_Extends T_Identifier .

    $default  reduce using rule 23 (ExtendsQ)


state 11

   22 ClassDefn: T_Class T_Identifier ExtendsQ '{' . Fieldlist '}'

    error  shift, and go to state 12

    error      [reduce using rule 26 (Fieldlist)]
    T_Void     reduce using rule 26 (Fieldlist)
    T_Int      reduce using rule 26 (Fieldlist)
    T_Double   reduce using rule 26 (Fieldlist)
    T_Boolean  reduce using rule 26 (Fieldlist)
    T_String   reduce using rule 26 (Fieldlist)
    T_Class    reduce using rule 26 (Fieldlist)
    '}'        reduce using rule 26 (Fieldlist)

    Fieldlist  go to state 13


state 12

   27 Fieldlist: error .

    $default  reduce using rule 27 (Fieldlist)


state 13

   22 ClassDefn: T_Class T_Identifier ExtendsQ '{' Fieldlist . '}'
   25 Fieldlist: Fieldlist . Field

    error      shift, and go to state 14
    T_Void     shift, and go to state 15
    T_Int      shift, and go to state 16
    T_Double   shift, and go to state 17
    T_Boolean  shift, and go to state 18
    T_String   shift, and go to state 19
    T_Class    shift, and go to state 20
    '}'        shift, and go to state 21

    VariableDecl  go to state 22
    Variable      go to state 23
    Type          go to state 24
    FunctionDecl  go to state 25
    FunctionDefn  go to state 26
    Field         go to state 27


state 14

    5 VariableDecl: error .
    7 Variable: error .
   15 Type: error .

    T_Identifier  reduce using rule 15 (Type)
    '['           reduce using rule 15 (Type)
    ';'           reduce using rule 7 (Variable)
    $default      reduce using rule 5 (VariableDecl)


state 15

   12 Type: T_Void .

    $default  reduce using rule 12 (Type)


state 16

    8 Type: T_Int .

    $default  reduce using rule 8 (Type)


state 17

    9 Type: T_Double .

    $default  reduce using rule 9 (Type)


state 18

   10 Type: T_Boolean .

    $default  reduce using rule 10 (Type)


state 19

   11 Type: T_String .

    $default  reduce using rule 11 (Type)


state 20

   13 Type: T_Class . T_Identifier

    T_Identifier  shift, and go to state 28


state 21

   22 ClassDefn: T_Class T_Identifier ExtendsQ '{' Fieldlist '}' .

    $default  reduce using rule 22 (ClassDefn)


state 22

   28 Field: VariableDecl .

    $default  reduce using rule 28 (Field)


state 23

    4 VariableDecl: Variable . ';'

    ';'  shift, and go to state 29


state 24

    6 Variable: Type . T_Identifier
   14 Type: Type . '[' ']'
   20 FunctionDecl: Type . T_Identifier '(' Formals ')' ';'
   21 FunctionDefn: Type . T_Identifier '(' Formals ')' StmtBlock

    T_Identifier  shift, and go to state 30
    '['           shift, and go to state 31


state 25

   29 Field: FunctionDecl .

    $default  reduce using rule 29 (Field)


state 26

   30 Field: FunctionDefn .

    $default  reduce using rule 30 (Field)


state 27

   25 Fieldlist: Fieldlist Field .

    $default  reduce using rule 25 (Fieldlist)


state 28

   13 Type: T_Class T_Identifier .

    $default  reduce using rule 13 (Type)


state 29

    4 VariableDecl: Variable ';' .

    $default  reduce using rule 4 (VariableDecl)


state 30

    6 Variable: Type T_Identifier .
   20 FunctionDecl: Type T_Identifier . '(' Formals ')' ';'
   21 FunctionDefn: Type T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 32

    $default  reduce using rule 6 (Variable)


state 31

   14 Type: Type '[' . ']'

    ']'  shift, and go to state 33


state 32

   20 FunctionDecl: Type T_Identifier '(' . Formals ')' ';'
   21 FunctionDefn: Type T_Identifier '(' . Formals ')' StmtBlock

    error      shift, and go to state 34
    T_Void     shift, and go to state 15
    T_Int      shift, and go to state 16
    T_Double   shift, and go to state 17
    T_Boolean  shift, and go to state 18
    T_String   shift, and go to state 19
    T_Class    shift, and go to state 20

    ')'  reduce using rule 17 (Formals)

    Variable      go to state 35
    Type          go to state 36
    Formals       go to state 37
    VariableMore  go to state 38


state 33

   14 Type: Type '[' ']' .

    $default  reduce using rule 14 (Type)


state 34

    7 Variable: error .
   15 Type: error .

    T_Identifier  reduce using rule 15 (Type)
    '['           reduce using rule 15 (Type)
    $default      reduce using rule 7 (Variable)


state 35

   18 VariableMore: Variable .

    $default  reduce using rule 18 (VariableMore)


state 36

    6 Variable: Type . T_Identifier
   14 Type: Type . '[' ']'

    T_Identifier  shift, and go to state 39
    '['           shift, and go to state 31


state 37

   20 FunctionDecl: Type T_Identifier '(' Formals . ')' ';'
   21 FunctionDefn: Type T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 40


state 38

   16 Formals: VariableMore .
   19 VariableMore: VariableMore . ',' Variable

    ','  shift, and go to state 41

    $default  reduce using rule 16 (Formals)


state 39

    6 Variable: Type T_Identifier .

    $default  reduce using rule 6 (Variable)


state 40

   20 FunctionDecl: Type T_Identifier '(' Formals ')' . ';'
   21 FunctionDefn: Type T_Identifier '(' Formals ')' . StmtBlock

    error  shift, and go to state 42
    ';'    shift, and go to state 43
    '{'    shift, and go to state 44

    StmtBlock  go to state 45


state 41

   19 VariableMore: VariableMore ',' . Variable

    error      shift, and go to state 34
    T_Void     shift, and go to state 15
    T_Int      shift, and go to state 16
    T_Double   shift, and go to state 17
    T_Boolean  shift, and go to state 18
    T_String   shift, and go to state 19
    T_Class    shift, and go to state 20

    Variable  go to state 46
    Type      go to state 36


state 42

   32 StmtBlock: error .

    $default  reduce using rule 32 (StmtBlock)


state 43

   20 FunctionDecl: Type T_Identifier '(' Formals ')' ';' .

    $default  reduce using rule 20 (FunctionDecl)


state 44

   31 StmtBlock: '{' . Stmtlist '}'

    $default  reduce using rule 34 (Stmtlist)

    Stmtlist  go to state 47


state 45

   21 FunctionDefn: Type T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 21 (FunctionDefn)


state 46

   19 VariableMore: VariableMore ',' Variable .

    $default  reduce using rule 19 (VariableMore)


state 47

   31 StmtBlock: '{' Stmtlist . '}'
   33 Stmtlist: Stmtlist . Stmt

    error              shift, and go to state 48
    T_Void             shift, and go to state 15
    T_Int              shift, and go to state 16
    T_Double           shift, and go to state 17
    T_Boolean          shift, and go to state 18
    T_String           shift, and go to state 19
    T_Class            shift, and go to state 20
    T_Null             shift, and go to state 49
    T_This             shift, and go to state 50
    T_For              shift, and go to state 51
    T_While            shift, and go to state 52
    T_If               shift, and go to state 53
    T_Return           shift, and go to state 54
    T_Break            shift, and go to state 55
    T_New              shift, and go to state 56
    T_NewArray         shift, and go to state 57
    T_Print            shift, and go to state 58
    T_ReadInteger      shift, and go to state 59
    T_ReadLine         shift, and go to state 60
    T_IntConstant      shift, and go to state 61
    T_DoubleConstant   shift, and go to state 62
    T_StringConstant   shift, and go to state 63
    T_Identifier       shift, and go to state 64
    T_BooleanConstant  shift, and go to state 65
    '-'                shift, and go to state 66
    '!'                shift, and go to state 67
    '('                shift, and go to state 68
    '{'                shift, and go to state 44
    '}'                shift, and go to state 69

    ';'  reduce using rule 46 (SimpleStmt)

    VariableDecl  go to state 70
    Variable      go to state 23
    Type          go to state 36
    StmtBlock     go to state 71
    Stmt          go to state 72
    SimpleStmt    go to state 73
    LValue        go to state 74
    Call          go to state 75
    ForStmt       go to state 76
    WhileStmt     go to state 77
    IfStmt        go to state 78
    ReturnStmt    go to state 79
    BreakStmt     go to state 80
    PrintStmt     go to state 81
    Expr          go to state 82
    Constant      go to state 83


state 48

    5 VariableDecl: error .
    7 Variable: error .
   15 Type: error .
   32 StmtBlock: error .
   47 SimpleStmt: error .
   51 LValue: error .
